<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0DA192"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/restartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:onClick="onClickRestart"
        android:padding="5dp"
        android:text="@string/restart"
        android:textColor="#545454"
        app:layout_constraintBottom_toTopOf="@+id/playLayout"
        app:layout_constraintEnd_toStartOf="@+id/resetButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:onClick="onClickReset"
        android:padding="5dp"
        android:text="@string/reset"
        android:textColor="#545454"
        app:layout_constraintBottom_toTopOf="@+id/playLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/restartButton"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/playLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#0DA192"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible">

        <view
            android:id="@+id/grid0"
            class="com.github.asad51.tictactoe.DrawableView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:background="#14BDAC"
            android:onClick="onClickGrid"
            android:tag="0"
            app:layout_constraintBottom_toTopOf="@+id/grid3"
            app:layout_constraintEnd_toStartOf="@+id/grid1"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".32" />

        <view
            android:id="@+id/grid1"
            class="com.github.asad51.tictactoe.DrawableView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:background="#14BDAC"
            android:onClick="onClickGrid"
            android:tag="1"
            app:layout_constraintBottom_toTopOf="@+id/grid4"
            app:layout_constraintEnd_toStartOf="@+id/grid2"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".32"
            app:layout_constraintStart_toEndOf="@+id/grid0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".32" />

        <view
            android:id="@+id/grid2"
            class="com.github.asad51.tictactoe.DrawableView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"
            android:background="#14BDAC"
            android:onClick="onClickGrid"
            android:tag="2"
            app:layout_constraintBottom_toTopOf="@+id/grid5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".32"
            app:layout_constraintStart_toEndOf="@+id/grid1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".32" />

        <view
            android:id="@+id/grid3"
            class="com.github.asad51.tictactoe.DrawableView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:background="#14BDAC"
            android:onClick="onClickGrid"
            android:tag="3"
            app:layout_constraintBottom_toTopOf="@+id/grid6"
            app:layout_constraintEnd_toStartOf="@+id/grid4"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grid0"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".32" />

        <view
            android:id="@+id/grid4"
            class="com.github.asad51.tictactoe.DrawableView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:background="#14BDAC"
            android:onClick="onClickGrid"
            android:tag="4"
            app:layout_constraintBottom_toTopOf="@+id/grid7"
            app:layout_constraintEnd_toStartOf="@+id/grid5"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".32"
            app:layout_constraintStart_toEndOf="@+id/grid3"
            app:layout_constraintTop_toBottomOf="@+id/grid1"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".32" />

        <view
            android:id="@+id/grid5"
            class="com.github.asad51.tictactoe.DrawableView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:background="#14BDAC"
            android:onClick="onClickGrid"
            android:tag="5"
            app:layout_constraintBottom_toTopOf="@+id/grid8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".32"
            app:layout_constraintStart_toEndOf="@+id/grid4"
            app:layout_constraintTop_toBottomOf="@+id/grid2"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".32" />

        <view
            android:id="@+id/grid6"
            class="com.github.asad51.tictactoe.DrawableView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="4dp"
            android:background="#14BDAC"
            android:onClick="onClickGrid"
            android:tag="6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/grid7"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grid3"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".32" />

        <view
            android:id="@+id/grid7"
            class="com.github.asad51.tictactoe.DrawableView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="4dp"
            android:background="#14BDAC"
            android:onClick="onClickGrid"
            android:tag="7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/grid8"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".32"
            app:layout_constraintStart_toEndOf="@+id/grid6"
            app:layout_constraintTop_toBottomOf="@+id/grid4"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".32" />

        <view
            android:id="@+id/grid8"
            class="com.github.asad51.tictactoe.DrawableView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#14BDAC"
            android:onClick="onClickGrid"
            android:tag="8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".32"
            app:layout_constraintStart_toEndOf="@+id/grid7"
            app:layout_constraintTop_toBottomOf="@id/grid5"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".32" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/winnerLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#14BDAC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:onClick="onClickStartButton"
            android:padding="5dp"
            android:text="@string/start"
            android:textColor="#545454"
            app:layout_constraintBottom_toTopOf="@+id/winnerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/start" />

        <view
            android:id="@+id/winnerView"
            class="com.github.asad51.tictactoe.DrawableView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".5"
            tools:visibility="invisible" />

        <view
            android:id="@+id/drawViewO"
            class="com.github.asad51.tictactoe.DrawableView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".5" />

        <view
            android:id="@+id/drawViewX"
            class="com.github.asad51.tictactoe.DrawableView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".5"
            app:layout_constraintStart_toEndOf="@+id/drawViewO"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".5" />

        <TextView
            android:id="@+id/winnerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/winner"
            android:textColor="#545454"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/winnerView"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/status"
        android:textColor="#545454"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winnerLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>